# Dreamhatch

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e87eb233ea31_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  contact.py  donations.py  newsletter.py  projects.py
backend/app/core/: base.py  config.py  database.py  security.py
backend/app/data/: projects.json
backend/app/models/: __init__.py  contact.py  donation.py  newsletter.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  contact.py  donation.py  newsletter.py  project.py
backend/app/scripts/: __init__.py  seed_data.py
backend/app/services/: __init__.py  contacts.py  content.py  donations.py  email.py  newsletter.py  users.py
backend/app/static/: index.html
backend/app/static/assets/: ContactPage-XVqZ9HTM.js  ContactPage-yiqCb28L.js  ContactSection.vue_vue_type_script_setup_true_lang-6t8_eksX.js  ContactSection.vue_vue_type_script_setup_true_lang-DUOgTvt4.js  HomePage-DiDf32BW.js  HomePage-Y02mGOXC.js  NotFoundPage-B8bvgych.js  NotFoundPage-CmVmocPX.js  ProjectPage-CvSNvuZp.js  ProjectPage-DCWRcnFU.js  heart-CyGmUhHo.js  heart-D1yiaFrS.js  (+4 more)
backend/tests/: test_admin_api.py  test_auth_api.py  test_contact_api.py  test_donations_api.py  test_health.py  test_newsletter_api.py  test_projects_api.py  test_security.py
(+44 files in other folders)
