[project]
name = "dreamhatch-backend"
version = "0.1.0"
description = "Dream Hatch Kenya — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1",  # passlib 1.7.4 is incompatible with bcrypt >= 4.1
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "resend>=2.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
